syntax = "proto3";

package blogging;

option go_package = "./blogging";

import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";
import "blogging/common.proto";

service CategoryService {
  rpc GetCategories(GetCategoriesRequest) returns (GetCategoriesResponse) {
    option (google.api.http) = {
      get: "/api/v1/category"
    };
  }
  rpc CreateCategory(CreateCategoryRequest) returns (CreateCategoryResponse){
    option (google.api.http) = {
      post: "/api/v1/category"
      body: "*"
    };
  }
  rpc UpdateCategory(UpdateCategoryRequest) returns (UpdateCategoryResponse){
    option (google.api.http) = {
      patch: "/api/v1/category/{category_id}"
      body: "*"
    };
  }
}

message GetCategoriesRequest {
  int32 page = 1;
  int32 page_size = 2;
  google.protobuf.StringValue search_name = 3;
  // apply sort by (total blog with category, ...)
  google.protobuf.StringValue sort_by = 4;
}

message  GetCategoriesResponse {
  message Data {
    repeated CategoryMetadata categories = 1;
    Pagination pagination = 2;
  }
  int32 code = 1;
  string message = 2;
  Data data = 3;
}

message CreateCategoryRequest {
  string name = 1;
  google.protobuf.StringValue description = 2;
}

message CreateCategoryResponse {
  message Data {
      Category category = 1;
  }
  int32 code = 1;
  string message = 2;
  Data data = 3;
}

message UpdateCategoryRequest {
  string category_id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue description = 3;
}

message UpdateCategoryResponse {
  message Data {
    Category category = 1;
  }
  int32 code = 1;
  string message = 2;
  Data data = 3;
}
